force-app/main/default/objects/Brackets_Round__c/Brackets_Round__c.object-meta.xml
<CustomObject>
    <label>Round</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rounds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>