force-app/main/default/objects/Brackets_Round__c/fields/Brackets_Tournament__c.field-meta.xml
<CustomField>
    <fullName>Brackets_Tournament__c</fullName>
    <label>Tournament</label>
    <referenceTo>Brackets_Tournament__c</referenceTo>
    <relationshipLabel>Rounds</relationshipLabel>
    <relationshipName>Rounds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>