force-app/main/default/objects/Brackets_Round__c/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <inlineHelpText
    >Last date to make predictions for the round.</inlineHelpText>
    <label>Deadline</label>
    <type>DateTime</type>
</CustomField>