force-app/main/default/objects/Brackets_Round__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <inlineHelpText
    >End date of the round, calculated with the date of the last match.</inlineHelpText>
    <label>End</label>
    <summarizedField>Brackets_Match__c.Schedule__c</summarizedField>
    <summaryForeignKey>Brackets_Match__c.Brackets_Round__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>