force-app/main/default/objects/Brackets_Round__c/fields/MinScheduleBrackets_Match__c.field-meta.xml
<CustomField>
    <fullName>MinScheduleBrackets_Match__c</fullName>
    <label>MinScheduleMatch</label>
    <summarizedField>Brackets_Match__c.Schedule__c</summarizedField>
    <summaryForeignKey>Brackets_Match__c.Brackets_Round__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>