force-app/main/default/objects/Brackets_Round__c/fields/RoundNumber__c.field-meta.xml
<CustomField>
    <fullName>RoundNumber__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText
    >Number indicating the position of the round, being 1 the first round</inlineHelpText>
    <label>Round Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>