force-app/main/default/objects/Brackets_Round__c/fields/ScorePoints__c.field-meta.xml
<CustomField>
    <fullName>ScorePoints__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText
    >Points a user wins for each correct prediction in the round</inlineHelpText>
    <label>Score Points</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>