force-app/main/default/objects/Brackets_Round__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <inlineHelpText
    >Start date of the round, calculated with the date of the first match.</inlineHelpText>
    <label>Start</label>
    <summarizedField>Brackets_Match__c.Schedule__c</summarizedField>
    <summaryForeignKey>Brackets_Match__c.Brackets_Round__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>