force-app/main/default/objects/Brackets_Round__c/validationRules/DeadlineBeforeSchedule.validationRule-meta.xml
<ValidationRule>
    <fullName>DeadlineBeforeSchedule</fullName>
    <active>true</active>
    <errorConditionFormula
    >Deadline__c  &gt; MinScheduleBrackets_Match__c</errorConditionFormula>
    <errorDisplayField>Deadline__c</errorDisplayField>
    <errorMessage
    >This date is greater than their matches&apos;s schedule.</errorMessage>
</ValidationRule>