force-app/main/default/objects/Brackets_Round__c/validationRules/DeadlineBeforeStart.validationRule-meta.xml
<ValidationRule>
    <fullName>DeadlineBeforeStart</fullName>
    <active>true</active>
    <description>The deadline must be before the first game</description>
    <errorConditionFormula>and (
!isblank(Deadline__c),
!isblank(Start__c),
Deadline__c &gt; Start__c )</errorConditionFormula>
    <errorMessage
    >The deadline must be before the first game (round)</errorMessage>
</ValidationRule>