force-app/main/default/objects/Brackets_Round__c/validationRules/PositiveScorePoints.validationRule-meta.xml
<ValidationRule>
    <fullName>PositiveScorePoints</fullName>
    <active>true</active>
    <description>The score points must be a positive integer</description>
    <errorConditionFormula>ScorePoints__c &lt; 0</errorConditionFormula>
    <errorMessage>Score points must be positive</errorMessage>
</ValidationRule>