force-app/main/default/objects/Brackets_Round__c/validationRules/PositveRoundNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>PositveRoundNumber</fullName>
    <active>true</active>
    <description>The round number must be positive</description>
    <errorConditionFormula>RoundNumber__c &lt; 0</errorConditionFormula>
    <errorMessage>The round number must be positive</errorMessage>
</ValidationRule>