force-app/main/default/objects/Brackets_Round__c/validationRules/RoundNumberNotUpdateable.validationRule-meta.xml
<ValidationRule>
    <fullName>RoundNumberNotUpdateable</fullName>
    <active>true</active>
    <errorConditionFormula
    >NOT(ISNEW()) &amp;&amp;  ISCHANGED( RoundNumber__c )</errorConditionFormula>
    <errorDisplayField>RoundNumber__c</errorDisplayField>
    <errorMessage>This field is not updatable.</errorMessage>
</ValidationRule>